--- a/master/data/appendix02.tex
+++ b/master/data/appendix02.tex
@@ -27,12 +27,12 @@
 \item 附录
 \item 致谢
 \end{enumerate}
-三、输出要求
+\section{输出要求}
 
 学位论文全部内容应采用计算机编辑，双面打印，使用A4规格纸输出。\par
 
-研究生学位论文完成后，硕士生、博士生均交研究生部
+研究生学位论文完成后，硕士生、博士生均交研究生部。
 
-\section{本学位论文，由研究生部分别提交档案馆、国家图书馆等单位收藏。}
+\section{本学位论文，由研究生部分别提交档案馆、国家图书馆等单位收藏}
 \section{论文格式样例}
 请见官方Word文档，此处略。
