--- a/master/thesis.tex
+++ b/master/thesis.tex
@@ -52,13 +52,13 @@
 \confidentiality{无}
 \serialno{2037508007}
 \title{首都师范大学硕士/博士\\
-  学位论文\LaTeX{}模板使用手册}
-\displaytitle{首都师范大学硕士/博士学位论文\LaTeX{}模板示例}
-\author{郭 靖}
+  学位论文\LaTeX{}模板示例文档}
+\displaytitle{首都师范大学硕士/博士学位论文\LaTeX{}模板示例文档}
+\author{郭\ 靖}
 \subject{现代教育技术}
 \researchfield{现代教育技术}
 \school{教育学院}
-\supervisor{潘 克 明}
+\supervisor{潘\ 克\ 明}
 \zhdate{2006 年 12 月 3 日}
 % 插入摘要，制作封面
 \pdfbookmark[1]{封面}{titlepage}
@@ -85,6 +85,7 @@
 }
 
 {\cleardoublepage\pagenumbering{Roman}
+\pdfbookmark[1]{符号列表}{denotation}
 \input{data/denotation} % 如果要生成符号列表
 }
 
