--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
 TODO
 ----
- - 修改硕博模板示例文件，以提供简明的使用信息
+
+
+- 本科生毕业论文（设计）模版
+1、将itemize,enumerate的\item后面的点号改为顿号
+2、空白页面不计入页数
+3、参考文献样式
+4、关键词过多时会出现超出摘要内容的边界
+5、附录中图表使用和正文图表不同的lable，附图1，附表1这种
+
+- 硕博论文模版
+1、修改硕博模板示例文件，以提供简明的使用信息
