--- a/bachelor/CNUthesisX.tex
+++ b/bachelor/CNUthesisX.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside,typesetinfo,openany]{CNUthesisX}%twoside/oneside/openany/openright
+﻿\documentclass[twoside,typesetinfo,openany]{CNUthesisX}%twoside/oneside/openany/openright
 \usepackage{CNUthesisX}
 
 % 设置图形文件的搜索路径
