--- a/master/cnuthesis.dtx
+++ b/master/cnuthesis.dtx
@@ -1,4 +1,4 @@
-% \iffalse meta-comment
+﻿% \iffalse meta-comment
 %
 % Copyright (C) \the\year by Hoo Wan <imengyingchina@gmail.com>
 % This file may be distributed and/or modified under the
