--- a/master/data/appendix02.tex
+++ b/master/data/appendix02.tex
@@ -1,4 +1,4 @@
-\chapter{首都师范大学学位论文撰写格式要求}
+﻿\chapter{首都师范大学学位论文撰写格式要求}
 \label{cha:engorg}
 学位论文是表明作者从事科学研究取得的创造性成果和创新见解，并以此为内容撰写的、作为提出申请授予相应的学位评审用的学术论文。现提出学位论文的格式要求，请大家参照执行。
 
