--- a/master/slashbox.sty
+++ b/master/slashbox.sty
@@ -1,4 +1,4 @@
-% slashbox.sty by Koichi Yasuoka, May 27, 1993
+﻿% slashbox.sty by Koichi Yasuoka, May 27, 1993
 %              minor modification by Toru Sato, May 31, 1993
 \typeout{slashbox style by K.Yasuoka, May 1993.}%
 \newbox\@slashboxa
