--- a/master/data/abstract.tex
+++ b/master/data/abstract.tex
@@ -1,4 +1,4 @@
-\begin{cabstract}
+﻿\begin{cabstract}
 华南师范大学是一所有着悠久历史和深厚人文底蕴的高等学府，学校地处中国改革开放之%
 都——广州，深得岭南开放务实之精神，有着素朴的传统和良好的学风，七十多年来，学校坚%
 持师范教育的特色，始终致力于培养人格健全、有思想、有能力、有社会责任感的优秀人才。%
